--- a/Views/Categories/Details.cshtml
+++ b/Views/Categories/Details.cshtml
@@ -23,7 +23,8 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Img)
+            
+            <img style="width=50px; height=50px;" src="/assets/img/product/@Model.Img" alt="Category Image"/>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Img)
