--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit"  enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
@@ -23,9 +23,14 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+            <div class="form-group display-none">
+                <input asp-for="Img" hidden />
+            </div>
             <div class="form-group">
+                <img style="width=50px; height=50px;" src="~/assets/img/product/@Model.Img" alt="oldImage"/>
                 <label asp-for="Img" class="control-label"></label>
-                <input asp-for="Img" class="form-control" />
+                <input type="file" accept=".png,.jpg" id="Img" 
+                    name="imgFile" class="form-control" />
                 <span asp-validation-for="Img" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
