--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -19,6 +19,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
+               @* <img style="width=50px; height=50px;" src="@Url.Content("/assets/img/product/"+@Model.Img)" alt="Category Image"/>*@
                 @Html.DisplayNameFor(model => model.Img)
             </th>
             <th>
