--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-               @* <img style="width=50px; height=50px;" src="@Url.Content("/assets/img/product/"+@Model.Img)" alt="Category Image"/>*@
+               
                 @Html.DisplayNameFor(model => model.Img)
             </th>
             <th>
@@ -38,7 +38,8 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Img)
+                 <img style="width=50px; height=50px;" src="@Url.Content("/assets/img/product/"+item.Img)" alt="Category Image"/>
+                @*@Html.DisplayFor(modelItem => item.Img)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsActive)
