--- a/Views/Navigator/AboutUs.cshtml
+++ b/Views/Navigator/AboutUs.cshtml
@@ -7,6 +7,8 @@
           <div class="col-lg-12">
             <div class="breadcrumb_iner text-center">
               <div class="breadcrumb_iner_item">
+                 <img src="/assets/img/icon/feature_icon_1.png" alt="" />
+
                 <h2>featured</h2>
               </div>
             </div>
@@ -25,7 +27,7 @@
               <div class="col-lg-6 col-sm-6">
                 <div class="single_feature">
                   <div class="single_feature_part">
-                    <img src="img/icon/feature_icon_1.png" alt="" />
+                    <img src="/assets/img/icon/feature_icon_1.png" alt="" />
                     <h4>A Volunteer</h4>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipiscing elit sed
@@ -37,7 +39,7 @@
               <div class="col-lg-6 col-sm-6">
                 <div class="single_feature">
                   <div class="single_feature_part">
-                    <img src="img/icon/feature_icon_2.png" alt="" />
+                    <img src="/assets/img/icon/feature_icon_2.png" alt="" />
                     <h4>A Volunteer</h4>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipiscing elit sed
@@ -47,7 +49,7 @@
                 </div>
                 <div class="single_feature">
                   <div class="single_feature_part single_feature_part_2">
-                    <img src="img/icon/feature_icon_3.png" alt="" />
+                    <img src="/assets/img/icon/feature_icon_3.png" alt="" />
                     <h4>A Volunteer</h4>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipiscing elit sed
@@ -82,17 +84,17 @@
                 </div>
               </div>
               <a href="#" class="btn_4"
-                >learn more <img src="img/icon/right-arrow.svg" alt=""
+                >learn more <img src="/assets/img/icon/right-arrow.svg" alt="xsadads"
               /></a>
             </div>
           </div>
         </div>
       </div>
 
-      <img src="img/animate_icon/Shape-1.png" alt="" class="feature_icon_1" />
-      <img src="img/animate_icon/Shape-14.png" alt="" class="feature_icon_2" />
-      <img src="img/animate_icon/Shape.png" alt="" class="feature_icon_3" />
-      <img src="img/animate_icon/shape-3.png" alt="" class="feature_icon_4" />
+      <img src="/assets/img/animate_icon/Shape-1.png" alt="" class="feature_icon_1" />
+      <img src="/assets/img/animate_icon/Shape-14.png" alt="" class="feature_icon_2" />
+      <img src="/assets/img/animate_icon/Shape.png" alt="" class="feature_icon_3" />
+      <img src="/assets/img/animate_icon/shape-3.png" alt="" class="feature_icon_4" />
     </section>
     <!-- upcoming_event part start-->
 
@@ -114,15 +116,15 @@
           </div>
           <div class="col-md-6 col-lg-6">
             <div class="learning_img">
-              <img src="img/about_img.png" alt="" />
+              <img src="/assets/img/about_img.png" alt="" />
             </div>
           </div>
         </div>
       </div>
-      <img src="img/left_sharp.png" alt="" class="left_shape_1" />
-      <img src="img/about_shape.png" alt="" class="about_shape_1" />
-      <img src="img/animate_icon/Shape-16.png" alt="" class="feature_icon_1" />
-      <img src="img/animate_icon/Shape-1.png" alt="" class="feature_icon_4" />
+      <img src="/assets/img/left_sharp.png" alt="" class="left_shape_1" />
+      <img src="/assets/img/about_shape.png" alt="" class="about_shape_1" />
+      <img src="/assets/img/animate_icon/Shape-16.png" alt="" class="feature_icon_1" />
+      <img src="/assets/img/animate_icon/Shape-1.png" alt="" class="feature_icon_4" />
     </section>
     <!-- about_us part end-->
 
