product page product img upload login sing up

--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -38,7 +38,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                 <img style="width=50px; height=50px;" src="@Url.Content("/assets/img/product/"+item.Img)" alt="Category Image"/>
+                 <img style="width=50px; height=50px;" src="@Url.Content("/assets/img/category/"+item.Img)" alt="Category Image"/>
                 @*@Html.DisplayFor(modelItem => item.Img)*@
             </td>
             <td>
