--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -6,35 +6,62 @@
 <h1>Login</h1>
 
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login">
-            <div asp-validation-summary="All" class="text-danger"></div>
 
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+<section class="login_part padding_top">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-6">
+                <div class="login_part_text text-center">
+                    <div class="login_part_text_iner">
+                        <h2>New to our Shop?</h2>
+                        <p>
+                            There are advances being made in science and technology
+                            everyday, and a good example of this is the
+                        </p>
+                        <a href="#" class="btn_3">Create an Account</a>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div>
-                <label asp-for="RememberMe"></label>
-                <input asp-for="RememberMe" />
-                <span asp-validation-for="RememberMe"></span>
-            </div>
+            <div class="col-lg-6 col-md-6">
+                <div class="login_part_form">
+                    <div class="login_part_form_iner">
+                        <h3>
+                            Welcome Back ! <br>
+                            Please Sign in now
+                        </h3>
+                        <form class="row contact_form" asp-action="Login" method="post" novalidate="novalidate">
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+                            <div asp-validation-summary="All" class="text-danger"></div>
+
+                            <div class="col-md-12 form-group p_star">
+                                <label asp-for="Email" class="control-label"></label>
+                                <input asp-for="Email" class="form-control" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-12 form-group p_star">
+                                <label asp-for="Password" class="control-label"></label>
+                                <input asp-for="Password" class="form-control" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <div class="creat_account d-flex align-items-center">
+                                    <label asp-for="RememberMe"></label>
+                                    <input asp-for="RememberMe" />
+                                    <span asp-validation-for="RememberMe"></span>
+                                </div>
+                                <button type="submit" value="submit" class="btn_3">
+                                    log in
+                                </button>
+                                <a class="lost_pass" href="">forget password?</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</section>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
