--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -23,10 +23,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Img" class="control-label"></label>
-                <input type="file" accept=".png,.jpg" id="Img" 
-                    name="imgFile" class="form-control" />
-                <span asp-validation-for="Img" class="text-danger"></span>
+                <label asp-for="imgFile" class="control-label"></label>
+                <input type="file" accept=".png,.jpg" asp-for="imgFile" class="form-control" />
+                <span asp-validation-for="imgFile" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -44,6 +43,8 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@section Scripts
+{
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 }
