--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -27,11 +27,10 @@
                 <input asp-for="Img" hidden />
             </div>
             <div class="form-group">
-                <img style="width=50px; height=50px;" src="~/assets/img/product/@Model.Img" alt="oldImage"/>
-                <label asp-for="Img" class="control-label"></label>
-                <input type="file" accept=".png,.jpg" id="Img" 
-                    name="imgFile" class="form-control" />
-                <span asp-validation-for="Img" class="text-danger"></span>
+                <img style="width=50px; height=50px;" src="~/assets/img/category/@Model.Img" alt="oldImage"/>
+                <label asp-for="imgFile" class="control-label"></label>
+                <input type="file" accept=".png,.jpg" asp-for="imgFile" class="form-control" />
+                <span asp-validation-for="imgFile" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
