--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
@@ -39,9 +39,9 @@
                 <span asp-validation-for="Discount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Img" class="control-label"></label>
-                <input asp-for="Img" class="form-control" />
-                <span asp-validation-for="Img" class="text-danger"></span>
+                <label asp-for="imgFile" class="control-label"></label>
+                <input type="file" asp-for="imgFile" class="form-control" />
+                <span asp-validation-for="imgFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Rate" class="control-label"></label>
