--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -27,7 +27,7 @@
                             Hello  ! <br>
                             Please Sign Up now
                         </h3>
-                        <form class="row contact_form" asp-action="Login" method="post" novalidate="novalidate">
+                        <form class="row contact_form" asp-action="Register" method="post" novalidate="novalidate">
 
                             <div asp-validation-summary="All" class="text-danger"></div>                          
                             <div class="col-md-12 form-group p_star">
