--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -55,7 +55,7 @@
               >
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" asp-action="index" asp-controller="Categories">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a
@@ -67,18 +67,14 @@
                       aria-haspopup="true"
                       aria-expanded="false"
                     >
-                      Shop
+                      Store
                     </a>
                     <div
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdown_1"
                     >
-                      <a class="dropdown-item" href="category.html">
-                        shop category</a
-                      >
-                      <a class="dropdown-item" href="single-product.html"
-                        >product details</a
-                      >
+                      <a class="dropdown-item" asp-action="index" asp-controller="Products">
+                        products</a>
                     </div>
                   </li>
                   <li class="nav-item dropdown">
@@ -91,59 +87,75 @@
                       aria-haspopup="true"
                       aria-expanded="false"
                     >
-                      pages
+                      Shopping
                     </a>
                     <div
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdown_2"
                     >
-                      <a class="dropdown-item" href="login.html"> login</a>
-                      <a class="dropdown-item" href="tracking.html">tracking</a>
-                      <a class="dropdown-item" href="checkout.html"
-                        >product checkout</a
-                      >
-                      <a class="dropdown-item" href="cart.html"
-                        >shopping cart</a
-                      >
-                      <a class="dropdown-item" href="confirmation.html"
-                        >confirmation</a
-                      >
-                      <a class="dropdown-item" href="elements.html">elements</a>
+                      <a class="dropdown-item" asp-action="index" asp-controller="Orders"
+                        >product checkout</a>
+                      <a class="dropdown-item" asp-action="Cart" asp-controller="Navigator"
+                        >shopping cart</a>
                     </div>
                   </li>
+
                   <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
                       href="blog.html"
-                      id="navbarDropdown_2"
+                      id="navbarDropdown_3"
                       role="button"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false"
                     >
-                      blog
+                      About Us
                     </a>
                     <div
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdown_2"
                     >
-                      <a class="dropdown-item" href="blog.html"> blog</a>
-                      <a class="dropdown-item" href="single-blog.html"
-                        >Single blog</a
-                      >
+                      <a class="nav-link" asp-action="ContactUs" asp-controller="Navigator">Contact Us</a>
+                      <a class="nav-link" asp-action="AboutUs" asp-controller="Navigator">About Us</a>
                     </div>
                   </li>
 
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                  @if(User.IsInRole("Admin"))
+                  {
+                  <li class="nav-item dropdown">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      href="blog.html"
+                      id="navbarDropdown_3"
+                      role="button"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    >
+                      Admin
+                    </a>
+                    <div
+                      class="dropdown-menu"
+                      aria-labelledby="navbarDropdown_2"
+                    >
+                    <a class="nav-link" asp-action="RegisterAdmin" asp-controller="Account">Products List</a>
+                      <a class="nav-link" asp-action="List" asp-controller="Products">Products List</a>
+                      <a class="nav-link" asp-action="Create" asp-controller="Prodycts">Add Product</a>
+                      <a class="nav-link" asp-action="Index" asp-controller="Categories">Categories List</a>
+                      <a class="nav-link" asp-action="Create" asp-controller="Categories">Add Category</a>
+                    </div>
                   </li>
+                  }
                 </ul>
               </div>
               <div class="hearer_icon d-flex">
-                <a id="search_1" href="javascript:void(0)"
-                  ><i class="ti-search"></i
-                ></a>
-                <a href=""><i class="ti-heart"></i></a>
+                <a id="search_1" href="javascript:void(0)">
+                    <span class="iconify" data-icon="ei:search" data-width="20" data-height="20"></span>
+                </a>
+                <a href="">
+                    <span class="iconify" data-icon="akar-icons:heart" data-width="20" data-height="20"></span>
+                </a>
                 <div class="dropdown cart">
                   <a
                     class="dropdown-toggle"
@@ -154,15 +166,31 @@
                     aria-haspopup="true"
                     aria-expanded="false"
                   >
-                    <i class="fas fa-cart-plus"></i>
+                    <span class="iconify" data-icon="bi:cart-plus-fill" data-width="20" data-height="20"></span>
                   </a>
-                  <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <div class="single_product">
-    
-                                    </div>
-                                </div> -->
                 </div>
               </div>
+              <ul class="navbar-nav">
+              @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item">
+                            Welcome @User.Identity.Name
+                        </li> 
+                           <li class="nav-item">
+                        <a class="nav-link  btn btn-primary" asp-action="Logout" asp-controller="Account"> Logout</a>
+                      </li>         
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                        <a class="nav-link  btn btn-outline-primary" asp-action="Login" asp-controller="Account"> Login</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link  btn btn-primary" asp-action="Register" asp-controller="Account"> Register</a>
+                      </li>
+                                    
+                    }
+                    </ul>
             </nav>
           </div>
         </div>
@@ -178,7 +206,7 @@
             />
             <button type="submit" class="btn"></button>
             <span
-              class="ti-close"
+              class="ti-close it"
               id="close_search"
               title="Close Search"
             ></span>
@@ -187,7 +215,65 @@
       </div>
     </header>
     <!-- Header part end-->
+    @RenderSection("topSection", required: false)
+
+
     @RenderBody()
+
+    <!-- product_list part start-->
+     <section class="product_list best_seller">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="section_tittle text-center">
+                        <h2>Best Sellers <span>shop</span></h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-between">
+                <div class="col-lg-12">
+                    <div class="best_product_slider owl-carousel">
+                        <div class="single_product_item">
+                            <img src="/assets/img/product/product_1.png" alt="">
+                            <div class="single_product_text">
+                                <h4>Quartz Belt Watch</h4>
+                                <h3>$150.00</h3>
+                            </div>
+                        </div>
+                        <div class="single_product_item">
+                            <img src="/assets/img/product/product_2.png" alt="">
+                            <div class="single_product_text">
+                                <h4>Quartz Belt Watch</h4>
+                                <h3>$150.00</h3>
+                            </div>
+                        </div>
+                        <div class="single_product_item">
+                            <img src="/assets/img/product/product_3.png" alt="">
+                            <div class="single_product_text">
+                                <h4>Quartz Belt Watch</h4>
+                                <h3>$150.00</h3>
+                            </div>
+                        </div>
+                        <div class="single_product_item">
+                            <img src="/assets/img/product/product_4.png" alt="">
+                            <div class="single_product_text">
+                                <h4>Quartz Belt Watch</h4>
+                                <h3>$150.00</h3>
+                            </div>
+                        </div>
+                        <div class="single_product_item">
+                            <img src="/assets/img/product/product_5.png" alt="">
+                            <div class="single_product_text">
+                                <h4>Quartz Belt Watch</h4>
+                                <h3>$150.00</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- product_list part end-->
     <!--::footer_part start::-->
     <footer class="footer_part">
       <div class="container">
@@ -347,6 +433,7 @@
     <script src="/js/jquery.form.js"></script>
     <script src="/js/jquery.validate.min.js"></script>
     <script src="/js/mail-script.js"></script>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <!-- custom js -->
     <script src="/js/custom.js"></script>
     @RenderSection("Scripts",required:false)
