--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -166,11 +166,11 @@
                     {
                         
                           <div class="single_product_item">
-                            <img src="img/product/product_1.png" alt="">
+                            <img src="https://images.pexels.com/photos/90946/pexels-photo-90946.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=200" alt="">
                             <div class="single_product_text">
-                                <h4>item.Name</h4>
-                                <h3>item.UnitPrice</h3>
-                                <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
+                                <h4>@item.Name</h4>
+                                <h3>@item.UnitPrice</h3>
+                                <a   onclick="AddTOcart('@item.ID','@item.Name','@item.UnitPrice')"  name='@item.ID' class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                             </div>
                         </div>
                     }
