Fixing Header Image

--- a/Views/Navigator/AboutUs.cshtml
+++ b/Views/Navigator/AboutUs.cshtml
@@ -3,9 +3,9 @@
 }
 <section class="breadcrumb breadcrumb_bg">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="breadcrumb_iner text-center">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="breadcrumb_iner">
               <div class="breadcrumb_iner_item">
                  <img src="/assets/img/icon/feature_icon_1.png" alt="" />
 
