--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -116,8 +116,8 @@
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdown_2"
                     >
-                      <a class="nav-link" asp-action="ContactUs" asp-controller="Navigator">Contact Us</a>
-                      <a class="nav-link" asp-action="AboutUs" asp-controller="Navigator">About Us</a>
+                      <a class="dropdown-item" asp-action="ContactUs" asp-controller="Navigator">Contact Us</a>
+                      <a class="dropdown-item" asp-action="AboutUs" asp-controller="Navigator">About Us</a>
                     </div>
                   </li>
 
@@ -139,11 +139,11 @@
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdown_2"
                     >
-                    <a class="nav-link" asp-action="RegisterAdmin" asp-controller="Account">Products List</a>
-                      <a class="nav-link" asp-action="List" asp-controller="Products">Products List</a>
-                      <a class="nav-link" asp-action="Create" asp-controller="Prodycts">Add Product</a>
-                      <a class="nav-link" asp-action="Index" asp-controller="Categories">Categories List</a>
-                      <a class="nav-link" asp-action="Create" asp-controller="Categories">Add Category</a>
+                    <a class="dropdown-item" asp-action="RegisterAdmin" asp-controller="Account">Products List</a>
+                      <a class="dropdown-item" asp-action="List" asp-controller="Products">Products List</a>
+                      <a class="dropdown-item" asp-action="Create" asp-controller="Prodycts">Add Product</a>
+                      <a class="dropdown-item" asp-action="Index" asp-controller="Categories">Categories List</a>
+                      <a class="dropdown-item" asp-action="Create" asp-controller="Categories">Add Category</a>
                     </div>
                   </li>
                   }
