changing view product create

--- a/Views/Shared/_CreateLayout.cshtml
+++ b/Views/Shared/_CreateLayout.cshtml
@@ -1,34 +1,35 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="zxx">
+
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>aranoz</title>
-    <link rel="icon" href="img/favicon.png" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <!-- animate CSS -->
-    <link rel="stylesheet" href="/css/animate.css" />
-    <!-- owl carousel CSS -->
-    <link rel="stylesheet" href="/css/owl.carousel.min.css" />
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" href="/css/all.css" />
-    <!-- flaticon CSS -->
-    <link rel="stylesheet" href="/css/flaticon.css" />
-    <link rel="stylesheet" href="/css/themify-icons.css" />
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" href="/css/magnific-popup.css" />
-    <!-- swiper CSS -->
-    <link rel="stylesheet" href="/css/slick.css" />
-    <!-- style CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>aranoz</title>
+	<link rel="icon" href="/img/favicon.png">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<!-- animate CSS -->
+	<link rel="stylesheet" href="/css/animate.css">
+	<!-- owl carousel CSS -->
+	<link rel="stylesheet" href="/css/owl.carousel.min.css">
+	<!-- font awesome CSS -->
+	<link rel="stylesheet" href="/css/all.css">
+	<!-- flaticon CSS -->
+	<link rel="stylesheet" href="/css/flaticon.css">
+	<link rel="stylesheet" href="/css/themify-icons.css">
+	<link rel="stylesheet" href="/css/nice-select.css">
+	<!-- font awesome CSS -->
+	<link rel="stylesheet" href="/css/magnific-popup.css">
+	<!-- swiper CSS -->
+	<link rel="stylesheet" href="/css/slick.css">
+	<!-- style CSS -->
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <!--::header part start::-->
-    <header class="main_menu home_menu">
+	<!--::header part start::-->
+	<header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
@@ -200,114 +201,46 @@
         </div>
       </div>
     </header>
-    <!-- Header part end-->
-    @RenderSection("topSection", required: false)
+	<!-- Header part end-->
 
 
-            @RenderBody()
-     
+	<!-- breadcrumb start-->
+	<section class="breadcrumb breadcrumb_bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="breadcrumb_iner text-center">
+						<div class="breadcrumb_iner_item">
+							<h2>elements</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- breadcrumb start-->
 
-    <!-- product_list part start-->
-    <section class="product_list best_seller">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-12">
-                    <div class="section_tittle text-center">
-                        <h2>Best Sellers <span>shop</span></h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row align-items-center justify-content-between">
-                <div class="col-lg-12">
-                    <div class="best_product_slider owl-carousel">
-                        <div class="single_product_item">
-                            <img src="/assets/img/product/product_1.png" alt="">
-                            <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
-                            </div>
-                        </div>
-                        <div class="single_product_item">
-                            <img src="/assets/img/product/product_2.png" alt="">
-                            <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
-                            </div>
-                        </div>
-                        <div class="single_product_item">
-                            <img src="/assets/img/product/product_3.png" alt="">
-                            <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
-                            </div>
-                        </div>
-                        <div class="single_product_item">
-                            <img src="/assets/img/product/product_4.png" alt="">
-                            <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
-                            </div>
-                        </div>
-                        <div class="single_product_item">
-                            <img src="/assets/img/product/product_5.png" alt="">
-                            <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- product_list part end-->
-    <!-- start of modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document" style='max-width:50% !important'>
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div id='cartContent'></div>
+	<!-- Start Sample Area -->
+	
+	<!-- End Sample Area -->
 
-                    <!-- start of product cart -->
-                    <section class="h-100 h-custom" style="background-color: #d2c9ff;">
-                        <div class="container py-5 h-100">
-                            <div class="row d-flex justify-content-center align-items-center h-100">
-                                <div class="col-12">
-                                    <div class="card card-registration card-registration-2" style="border-radius: 15px;">
-                                        <div class="card-body p-0">
-                                            <div class="row g-0">
-                                                <div class="col-11">
-                                                    <div id='con' class="p-5">
-                                                    </div>
-                                                </div>
+	<!-- Start Button -->
+	
+	<!-- End Button -->
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
+	<!-- Start Align Area -->
+	
+			
+			
+		
+		
+		  @RenderSection("topSection", required: false)
+		 @RenderBody()
+				
+	<!-- End Align Area -->
 
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!--::footer_part start::-->
-    <footer class="footer_part">
+	<!--::footer_part start::-->
+	<footer class="footer_part">
         <div class="container">
             <div class="row justify-content-around">
                 <div class="col-sm-6 col-lg-2">
@@ -433,38 +366,37 @@
             </div>
         </div>
     </footer>
-    <!--::footer_part end::-->
-    <!-- jquery plugins here-->
-    <script src="/js/jquery-1.12.1.min.js"></script>
-    <!-- popper js -->
-    <script src="/js/popper.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="/js/bootstrap.min.js"></script>
-    <!-- easing js -->
-    <script src="/js/jquery.magnific-popup.js"></script>
-    <!-- swiper js -->
-    <script src="/js/swiper.min.js"></script>
-    <!-- swiper js -->
-    <script src="/js/masonry.pkgd.js"></script>
-    <!-- particles js -->
-    <script src="/js/owl.carousel.min.js"></script>
-    <script src="/js/jquery.nice-select.min.js"></script>
-    <!-- slick js -->
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/jquery.counterup.min.js"></script>
-    <script src="/js/waypoints.min.js"></script>
-    <script src="/js/contact.js"></script>
-    <script src="/js/jquery.ajaxchimp.min.js"></script>
-    <script src="/js/jquery.form.js"></script>
-    <script src="/js/jquery.validate.min.js"></script>
-    <script src="/js/mail-script.js"></script>
-    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <!-- custom js -->
-    <script src="/js/custom.js"></script>
-      <!-- cart js -->
-    <script src="/js/Cart.js"></script>
-     <!-- icon js -->
-     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+	<!--::footer_part end::-->
+
+	<!-- jquery plugins here-->
+	<!-- jquery -->
+	<script src="/js/jquery-1.12.1.min.js"></script>
+	<!-- popper js -->
+	<script src="/js/popper.min.js"></script>
+	<!-- bootstrap js -->
+	<script src="/js/bootstrap.min.js"></script>
+	<!-- easing js -->
+	<script src="/js/jquery.magnific-popup.js"></script>
+	<!-- swiper js -->
+	<script src="/js/swiper.min.js"></script>
+	<!-- swiper js -->
+	<script src="/js/masonry.pkgd.js"></script>
+	<!-- particles js -->
+	<script src="/js/owl.carousel.min.js"></script>
+	<script src="/js/jquery.nice-select.min.js"></script>
+	<!-- slick js -->
+	<script src="/js/slick.min.js"></script>
+	<script src="/js/jquery.counterup.min.js"></script>
+	<script src="/js/waypoints.min.js"></script>
+	<script src="/js/contact.js"></script>
+	<script src="/js/jquery.ajaxchimp.min.js"></script>
+	<script src="/js/jquery.form.js"></script>
+	<script src="/js/jquery.validate.min.js"></script>
+	<script src="/js/mail-script.js"></script>
+	<!-- custom js -->
+	<script src="/js/custom.js"></script>
     @RenderSection("Scripts",required:false)
+
 </body>
+
 </html>
