fix Cart for Local users

--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -154,8 +154,10 @@
                   >
                     <i class="fa-solid fa-cart-shopping"  style="color:blue">
 
-                        <span id="cartItemNumber" style="position: relative;top: -10px;left: -2px;color: white;background: red;padding: 2px;font-size: smaller;">
-                            
+                        <span id="cartItemNumber" style="position: relative;
+                                 top: -10px;left: -2px;color: white;border-radius: 62%;
+                                 background: red;padding: 7px;font-size: xx-small; ">
+                            0
                             </span>
                     </i>
                   </a>
