--- a/Views/Products/List.cshtml
+++ b/Views/Products/List.cshtml
@@ -3,63 +3,70 @@
 @{
     ViewData["Title"] = "List";
     int x = 1;
+    Layout = "_CreateLayout";
 }
 
+<style>
+    .table-body{
+        height:30em;
+        overflow-x : auto;
+    }
+</style>
 
 <div class="container">
-    <div class="row">
-<h1>Products List</h1>
-
-<p>
-    <a class="btn btn-pt" asp-action="Create">Create New Product</a>
+<h1 class="l font-italic text-muted mt-3 text-center">Products List</h1>
+<p class="mb-3 text-center">
+    <a class="btn btn-primary" asp-action="Create">Create New Product</a>
 </p>
-
+    <div class="row">
         <div class="progress-table-wrap">
-					<div class="progress-table">
-						<div class="table-head">
-							<div class="serial">#</div>
-							<div class="country">Name</div>
-							<div class="country">Description</div>
-							<div class="country">Color</div>
-							<div class="country">Unit Price</div>
-							<div class="country">Discount</div>
-							<div class="country">Image</div>
-							<div class="country">Rate</div>
-							<div class="country">Category</div>
-							<div class="country">Cotrols</div>
-						</div>
-                        @foreach (var item in Model) {
-						<div class="table-row">
-							<div class="serial">@x++</div>
-							<div class="country">
-                                @item.Name
-                            </div>
-                            <div class="country">
-                                @item.Description
-                            </div>
-                            <div class="country">
-                                @item.Color
-                            </div>
-                            <div class="country">
-                                @item.UnitPrice
-                            </div>
-                            <div class="country">@item.Discount</div>
-                            <div class="country">
-                                 <img src="/assets/img/product/@item.Img" alt="img">
-                            </div>
-                            
-                            <div class="country">@item.Rate</div>
-                            <div class="country">@item.Category.Name</div>
-							<div class="visit">
-                                @Html.ActionLink("Edit", "Edit", new { id = @item.ID }) |
-
-                @Html.ActionLink("Details", "Details", new { id = @item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = @item.ID })
-                </div>
-						</div>
-                        }
-					</div>
+			<div class="progress-table">
+				<div class="table-head">
+					<div class="serial">#</div>
+					<div class="country">Name</div>
+					<div class="country">Description</div>
+					<div class="country">Color</div>
+					<div class="country">Unit Price</div>
+					<div class="country">Discount</div>
+					<div class="country">Image</div>
+					<div class="country">Rate</div>
+					<div class="country">Category</div>
+					<div class="country">Cotrols</div>
 				</div>
+                <div class="table-body">
+                @foreach (var item in Model) {
+				<div class="table-row">
+					<div class="serial">@x</div>
+                    @{x++;}
+					<div class="country">
+                        @item.Name
+                    </div>
+                    <div class="country">
+                        @item.Description
+                    </div>
+                    <div class="country">
+                        @item.Color
+                    </div>
+                    <div class="country">
+                        @item.UnitPrice
+                    </div>
+                    <div class="country">@item.Discount</div>
+                    <div class="country">
+                            <img src="/assets/img/product/@item.Img" alt="img">
+                    </div>
+                            
+                    <div class="country justify-content-center">@item.Rate</div>
+                    <div class="country">@item.Category.Name</div>
+					<div class="visit">
+                        <a asp-action="Edit" asp-controller="Product" asp-route-id="@item.ID"><i class="fa-solid fa-pen-to-square" style="font-size:20px"></i></a>&nbsp;|&nbsp;
+                        <a asp-action="Details" asp-controller="Product" asp-route-id="@item.ID"><i class="fa-solid fa-circle-info" style="font-size:20px"></i></a>&nbsp;|&nbsp;
+                        <a asp-action="Delete" asp-controller="Product" asp-route-id="@item.ID"><i class="fa-solid fa-trash-can" style="font-size:20px"></i></a>
+                    </div>
+				</div>
+                }
+                </div>
+			</div>
+		</div>
     </div>
 </div>
 
